[gd_scene load_steps=2 format=3 uid="uid://byhgdsr02cip0"]

[ext_resource type="Script" path="res://Scripts/Idle/main.gd" id="1_j6uun"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j6uun")

[node name="GoldLabel" type="Label" parent="."]
layout_mode = 2
anchor_top = 0.543
anchor_right = 1.0
anchor_bottom = 0.698
offset_top = 0.135986
offset_bottom = -0.304016
size_flags_vertical = 1
text = "test"
horizontal_alignment = 1

[node name="GPSLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.543
anchor_right = 1.0
anchor_bottom = 0.698
offset_top = 0.135986
offset_bottom = -0.304016
horizontal_alignment = 1
vertical_alignment = 2

[node name="UpgradeCostLabel" type="Label" parent="."]
layout_mode = 2
anchor_left = 0.591
anchor_top = 0.752
anchor_right = 0.957
anchor_bottom = 0.929
offset_left = 0.167969
offset_top = -0.296021
offset_right = -0.463989
offset_bottom = 0.00799561
horizontal_alignment = 1
vertical_alignment = 2

[node name="UpgradeGPSLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.048
anchor_top = 0.752
anchor_right = 0.477
anchor_bottom = 0.929
offset_left = -0.296001
offset_top = -0.296021
offset_right = 0.495972
offset_bottom = 0.00799561
horizontal_alignment = 1
vertical_alignment = 2

[node name="GPCLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.591
anchor_top = 0.752
anchor_right = 0.957
anchor_bottom = 0.929
offset_left = 0.167969
offset_top = -0.296021
offset_right = -0.463989
offset_bottom = 0.00799561

[node name="MineButton" type="Button" parent="."]
layout_mode = 2
anchor_top = 0.543
anchor_right = 1.0
anchor_bottom = 0.698
offset_top = 0.135986
offset_bottom = -0.304016

[node name="UpgradeButton" type="Button" parent="."]
layout_mode = 2
anchor_left = 0.591
anchor_top = 0.752
anchor_right = 0.957
anchor_bottom = 0.929
offset_left = 0.167969
offset_top = -0.296021
offset_right = -0.463989
offset_bottom = 0.00799561

[node name="UpgradeGPSButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.048
anchor_top = 0.752
anchor_right = 0.477
anchor_bottom = 0.929
offset_left = -0.296001
offset_top = -0.296021
offset_right = 0.495972
offset_bottom = 0.00799561
